force-app/main/default/objects/leankor__RealtimeTracker__c/leankor__RealtimeTracker__c.object-meta.xml
<CustomObject>
    <description>This is a very high-velocity object which is used to indicate to all other global users looking at the same Value Stream that a change was made to the flow diagram. A change could be as simple as moving a card by 2 pixels on a flow diagram.</description>
    <label>RealtimeTracker</label>
    <nameField>
        <displayFormat>RT-{0000000000}</displayFormat>
        <label>RealtimeTracker Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RealtimeTrackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>