force-app/main/default/objects/leankor__RealtimeTracker__c/fields/leankor__ActivityTracked__c.field-meta.xml
<CustomField>
    <fullName>leankor__ActivityTracked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activity tracking indicator.</description>
    <inlineHelpText>Activity tracking indicator.</inlineHelpText>
    <label>Activity Tracked</label>
    <type>Checkbox</type>
</CustomField>