force-app/main/default/objects/leankor__RealtimeTracker__c/fields/leankor__JSONData__c.field-meta.xml
<CustomField>
    <fullName>leankor__JSONData__c</fullName>
    <description>DEPRECATED.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Do not use this field. It has been replaced with JSON Data Small.</inlineHelpText>
    <label>JSON Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>