force-app/main/default/objects/leankor__RealtimeTracker__c/fields/leankor__JSONDataSmall2__c.field-meta.xml
<CustomField>
    <fullName>leankor__JSONDataSmall2__c</fullName>
    <description>To accommodate larger JSON packages, we need to split out the text into several chunks so the Visualforce Streaming API can handle it.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter second portion of JSON string.</inlineHelpText>
    <label>JSON Data Small2</label>
    <type>TextArea</type>
</CustomField>