force-app/main/default/objects/leankor__RealtimeTracker__c/fields/leankor__JSONDataSmall4__c.field-meta.xml
<CustomField>
    <fullName>leankor__JSONDataSmall4__c</fullName>
    <description>To accommodate larger JSON packages we must split them up so Visualforce Streaming API can handle them.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter fourth JSON segment.</inlineHelpText>
    <label>JSON Data Small4</label>
    <type>TextArea</type>
</CustomField>