force-app/main/default/objects/leankor__RealtimeTracker__c/fields/leankor__KanbanVerb__c.field-meta.xml
<CustomField>
    <fullName>leankor__KanbanVerb__c</fullName>
    <description>This field defines what kind of real time event occurred.</description>
    <inlineHelpText>Select which type of realtime event just occurred.</inlineHelpText>
    <label>Kanban Verb</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OpenValueStream</fullName>
            </value>
            <value>
                <fullName>MoveKanban</fullName>
            </value>
            <value>
                <fullName>CloseValueStream</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>