force-app/main/default/objects/leankor__RealtimeTracker__c/fields/leankor__SessionID__c.field-meta.xml
<CustomField>
    <fullName>leankor__SessionID__c</fullName>
    <description>Session ID of the Force.com user trying to indicate a change in ValueStream objects.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the Force.com SessionID of the user making the real time update.</inlineHelpText>
    <label>Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>