force-app/main/default/objects/leankor__RealtimeTracker__c/fields/leankor__ValueStream__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStream__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ValueStream Id that uniquely identifies this work flow.</description>
    <inlineHelpText>The ValueStream Id that uniquely identifies this work flow.</inlineHelpText>
    <label>Value Stream</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>RealtimeTracker List</relationshipLabel>
    <relationshipName>RealtimeTrackers</relationshipName>
    <type>Lookup</type>
</CustomField>